--- a/metafont/metafont.ipynb
+++ b/metafont/metafont.ipynb
@@ -55,6 +55,19 @@
     },
     {
       "metadata": {
+        "id": "LmF1GI5wtMa1",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "El siguiente $z$ es:\n",
+        "$$\n",
+        "z(x)=a_0 + a_1 x +a_2 x^2 +a_3 x^3\\,.\n",
+        "$$"
+      ]
+    },
+    {
+      "metadata": {
         "id": "PTtIexMPijiQ",
         "colab_type": "code",
         "colab": {
