--- a/metafont/metafont.ipynb
+++ b/metafont/metafont.ipynb
@@ -60,9 +60,9 @@
       },
       "cell_type": "markdown",
       "source": [
-        "El siguiente $z$ es:\n",
+        "El siguiente función es un  [spline cúbico](https://es.wikipedia.org/wiki/Spline)\n",
         "$$\n",
-        "z(x)=a_0 + a_1 x +a_2 x^2 +a_3 x^3\\,.\n",
+        "y(x)=a_0 + a_1 x +a_2 x^2 +a_3 x^3\\,.\n",
         "$$"
       ]
     },
